# bun-opencv

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  build.json  package.json
.github/workflows/: build-and-publish.yml
scripts/: publish.ts
src/cpp/: template_matcher.c  template_matcher.cpp  template_matcher.h
src/ts/: index.ts  mat.ts  opencv.ts  opencv_direct.ts  template_matcher.test.ts  template_matcher.ts  types.ts
test/: basic.test.ts  ffi.test.ts  template_matcher.test.ts
